// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<td
  className="cf-xm5wql"
>
  TableCell
</td>
`;

exports[`should render extra class name 1`] = `
<td
  className="extra"
>
  TableCell
</td>
`;

exports[`should render with align 1`] = `
<td
  className="cf-1dzevu8"
>
  TableCell
</td>
`;
